Added some extra tests to make sure arguments were being passed okay.

--- a/trove/tests/examples/standard/post.ipynb
+++ b/trove/tests/examples/standard/post.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ec364b0",
+   "id": "8a8e5b5d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74bbc17e",
+   "id": "61d8ebc0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee6d55f2",
+   "id": "4ab1fe33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81b8398b",
+   "id": "22d3be39",
    "metadata": {},
    "source": [
     "# Parameters"
@@ -43,7 +43,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ce5e5f4",
+   "id": "9ac23360",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir( '/Users/zhafen/repos/trove/trove/' )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2cb70d4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce92f182",
+   "id": "c310eaf0",
    "metadata": {},
    "source": [
     "# Load Data"
@@ -63,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "836557b1",
+   "id": "468d9bf8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,17 +84,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1671d2d",
+   "id": "418b75ed",
    "metadata": {},
    "outputs": [],
    "source": [
     "main_fp = os.path.join( pm['used_data_dir'], 'main.hdf5' )\n",
-    "main = h5py.File( pre_fp, 'r' )"
+    "main = h5py.File( main_fp, 'r' )"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9084e060",
+   "id": "eb6b3fea",
    "metadata": {},
    "source": [
     "# Analysis\n",
@@ -95,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b70b1d15",
+   "id": "f56e0ea1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,17 +115,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "912256fc",
+   "id": "526f147c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rounded_raised = np.floor( main['numbers'][...] )"
+    "rounded_raised = np.floor( main['raised_numbers'][...] )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4f59e818",
+   "id": "0e124ca6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd4a9e06",
+   "id": "2982e428",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7966207d",
+   "id": "8d540f1f",
    "metadata": {},
    "outputs": [],
    "source": [
