Renamed data_dir -> root_data_dir, used_data_dir -> data_dir.

--- a/trove/tests/examples/standard/post.ipynb
+++ b/trove/tests/examples/standard/post.ipynb
@@ -77,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pre_fp = os.path.join( pm['used_data_dir'], 'pre.hdf5' )\n",
+    "pre_fp = os.path.join( pm['data_dir'], 'pre.hdf5' )\n",
     "pre = h5py.File( pre_fp, 'r' )"
    ]
   },
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_fp = os.path.join( pm['used_data_dir'], 'main.hdf5' )\n",
+    "main_fp = os.path.join( pm['data_dir'], 'main.hdf5' )\n",
     "main = h5py.File( main_fp, 'r' )"
    ]
   },
@@ -173,7 +173,7 @@
     ")\n",
     "\n",
     "os.makedirs( pm['figure_dir'], exist_ok=True )\n",
-    "savefile = os.path.join( pm['figure_dir'], 'last_digits_{}.pdf'.format( os.path.basename( pm['used_data_dir'] ) ) )\n",
+    "savefile = os.path.join( pm['figure_dir'], 'last_digits_{}.pdf'.format( os.path.basename( pm['data_dir'] ) ) )\n",
     "plt.savefig( savefile, bbox_inches='tight' )"
    ]
   }
