Refactoring and improving handling of variations and global variations.

--- a/trove/tests/examples/global_variations/post.ipynb
+++ b/trove/tests/examples/global_variations/post.ipynb
@@ -161,7 +161,7 @@
     "    bins = np.linspace( 0.5, 9.5, 10 ),\n",
     "    histtype = 'step',\n",
     "    linewidth = 10,\n",
-    "    color = 'b',\n",
+    "    color = pm['primary_color'],\n",
     ")\n",
     "\n",
     "_ = ax.hist(\n",
