Enabled sophisticated global variation handling, with picking and choosing data directories.

--- a/trove/tests/examples/global_variations/post.ipynb
+++ b/trove/tests/examples/global_variations/post.ipynb
@@ -29,7 +29,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import trove.build"
+    "import trove.build\n",
+    "import trove.config_parser"
    ]
   },
   {
@@ -58,7 +59,7 @@
    "outputs": [],
    "source": [
     "pm = trove.build.link_params_to_config(\n",
-    "    config_fp = './tests/examples/standard/standard.trove',\n",
+    "    config_fp = './tests/examples/global_variations/global_variations.trove',\n",
     ")"
    ]
   },
@@ -77,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pre_fp = os.path.join( pm['data_dir'], 'pre.hdf5' )\n",
+    "pre_fp = os.path.join( pm['data_dirs']['py.1'], 'pre.hdf5' )\n",
     "pre = h5py.File( pre_fp, 'r' )"
    ]
   },
@@ -88,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "main_fp = os.path.join( pm['data_dir'], 'main.hdf5' )\n",
+    "main_fp = os.path.join( pm['data_dirs']['py.2'], 'main.hdf5' )\n",
     "main = h5py.File( main_fp, 'r' )"
    ]
   },
